[gd_scene load_steps=9 format=2]

[ext_resource path="res://MUSIC/Music.gd" type="Script" id=1]
[ext_resource path="res://MUSIC/FLOOR1.mp3" type="AudioStream" id=2]
[ext_resource path="res://MUSIC/FLOOR2.mp3" type="AudioStream" id=3]
[ext_resource path="res://MUSIC/FLOOR3.mp3" type="AudioStream" id=4]
[ext_resource path="res://MUSIC/FLOOR4.mp3" type="AudioStream" id=5]
[ext_resource path="res://MUSIC/FLOOR5.mp3" type="AudioStream" id=6]
[ext_resource path="res://MUSIC/FLOOR6.mp3" type="AudioStream" id=7]
[ext_resource path="res://MUSIC/FLOORB.mp3" type="AudioStream" id=8]

[node name="Music" type="Node"]
script = ExtResource( 1 )

[node name="MUS1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -80.0

[node name="MUS2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -80.0

[node name="MUS3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -80.0

[node name="MUS4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -80.0

[node name="MUS5" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -80.0

[node name="MUS6" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -80.0

[node name="MUSB" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -80.0
